# DataPulse

./: .env model  .gitignore  anotations.txt  commands.txt  docker-compose.yml  pyproject.toml
python-service/: requirements.txt
python-service/app/: main.py
python-service/app/api/routes/: coins.py
python-service/app/cache/: redis_client.py
python-service/app/core/: logger.py
python-service/app/db/: database.py  init_db.py
python-service/app/integrations/: coingecko_client.py
python-service/app/mappers/: coin_mapper.py
python-service/app/models/: coin.py
python-service/app/services/: coin_service.py
