[project]
name = "datapulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp==3.13.3",
    "sqlalchemy==2.0.46",
    "psycopg[binary]==3.3.2",
    "python-dotenv",
    "aiosignal==1.4.0",
    "redis==7.2.0",
    "fastapi==0.134.0",
    "uvicorn==0.41.0",
]
